--- a/src/css/lib/seg_mobile_touch_include.css
+++ b/src/css/lib/seg_mobile_touch_include.css
@@ -1,2 +1,3 @@
-@import url(/documentation/css/lib/s-page.css);
-@import url(/documentation/css/lib/s-documentation.css);
+@import url(/test/src/css/lib/s-absolute.css);
+@import url(s-relative.css);
+@import url(http://test.whattheframework.org/documentation/css/lib/s-documentation.css);
