--- a/src/www/css/lib/seg_basic_include.css
+++ b/src/www/css/lib/seg_basic_include.css
@@ -1,3 +1,3 @@
-@import url(/test/src/css/lib/s-absolute.css);
+@import url(/css/lib/s-absolute.css);
 @import url(s-relative.css);
 @import url(http://test.whattheframework.org/documentation/css/lib/s-documentation.css);
