--- a/src/www/css/lib/seg_mobile_touch_include.css
+++ b/src/www/css/lib/seg_mobile_touch_include.css
@@ -1,3 +1,3 @@
 @import url(/css/lib/s-absolute.css);
 @import url(s-relative.css);
-@import url(http://test.whattheframework.org/documentation/css/lib/s-documentation.css);
+@import url(http://think.dk/css/lib/s-content.css);
